# CURM1.0_Robothon2023

./: .gitignore  .gitmodules  LICENSE  README.md
bash/calibration/: calibrate.sh  cam.sh
bash/task/: cam.sh  controller.sh  controller_right.sh  flexbe.sh  screen.sh  trackbox.sh
calibration/: README.md
calibration/bash/: calibrate.sh  cam.sh  flexiv_left.sh
calibration/launch/: calibrate.launch
calibration/rviz/: flexiv_moveit.rviz
calibration/test/: aruco.launch  aruco_ros_track.launch  calibrate.launch  cam_pub.launch  print_aruco_tf.py  realsense.launch  ur5.launch
flexiv_control/: CMakeLists.txt  package.xml
flexiv_control/rdk/example/: CMakeLists.txt  floating_soft_foot_paddle_ctrl.cpp
flexiv_control/src/: flexiv_control_loop.cpp  flexiv_control_loop_contact_mode.cpp  flexiv_control_loop_test.cpp  flexiv_imp_control.cpp  flexiv_task_ready_position.cpp
flexiv_simulator/: CMakeLists.txt  README.md  package.xml
flexiv_simulator/launch/: simulator.launch
flexiv_simulator/scripts/: example_sin_wave.py
flexiv_whole_workflow_control_behaviors/: README.md
flexiv_whole_workflow_control_behaviors/flexiv_whole_workflow_control_flexbe_behaviors/: CMakeLists.txt  package.xml  setup.py
flexiv_whole_workflow_control_behaviors/flexiv_whole_workflow_control_flexbe_behaviors/manifest/: example_behavior.xml  hello_world_demo.xml  robothon2023_workflow.xml
flexiv_whole_workflow_control_behaviors/flexiv_whole_workflow_control_flexbe_behaviors/src/flexiv_whole_workflow_control_flexbe_behaviors/: hello_world_demo_sm.py  robothon2023_workflow_sm.py  robothon2023_workflow_sm.py.orig
flexiv_whole_workflow_control_behaviors/flexiv_whole_workflow_control_flexbe_states/: CMakeLists.txt  package.xml  setup.py
flexiv_whole_workflow_control_behaviors/flexiv_whole_workflow_control_flexbe_states/src/flexiv_whole_workflow_control_flexbe_states/: arm_cartesian_control_state.py  arm_joint_control_state.py  arm_peg_in_hole_state.py  calculate_task_pose_state.py  contact_calibration.py  gripper_control_state.py  hard_code_state.py  slider_control_state.py
report/: README.md
vision/: README.md  board_localization.py  utils.py
vision/src/: board_localization.py  screen_visualization.py
