<package>
  <name>flexiv_whole_workflow_control_flexbe_behaviors</name>
  <version>1.0.0</version>
  <description>
     flexiv_whole_workflow_control_flexbe_behaviors references all implemented behaviors.
  </description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>

  <export>
    <flexbe_behaviors />
  </export>

</package>
